; ModuleID = '/home/carl/AnghaBench/libgit2/tests/submodule/extr_update.c_checkout_notify_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/submodule/extr_update.c_checkout_notify_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.update_submodule_cb_payload = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*, i8*, i8*, i8*)* @checkout_notify_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkout_notify_cb(i8* %0, i8* %1, i8* %2, i8* %3, i8* %4, i8* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca %struct.update_submodule_cb_payload*, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  store i8* %5, i8** %12, align 8
  %14 = load i8*, i8** %12, align 8
  %15 = bitcast i8* %14 to %struct.update_submodule_cb_payload*
  store %struct.update_submodule_cb_payload* %15, %struct.update_submodule_cb_payload** %13, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = call i32 @GIT_UNUSED(i8* %16)
  %18 = load i8*, i8** %8, align 8
  %19 = call i32 @GIT_UNUSED(i8* %18)
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 @GIT_UNUSED(i8* %20)
  %22 = load i8*, i8** %10, align 8
  %23 = call i32 @GIT_UNUSED(i8* %22)
  %24 = load i8*, i8** %11, align 8
  %25 = call i32 @GIT_UNUSED(i8* %24)
  %26 = load %struct.update_submodule_cb_payload*, %struct.update_submodule_cb_payload** %13, align 8
  %27 = getelementptr inbounds %struct.update_submodule_cb_payload, %struct.update_submodule_cb_payload* %26, i32 0, i32 0
  store i32 1, i32* %27, align 4
  ret i32 0
}

declare dso_local i32 @GIT_UNUSED(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
